--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 Privacy Policy
-
 Effective Date: July 1, 2025
-Last Updated: July 1, 2025
+Last Updated: July 8, 2025
 
-1. Who We Are
+Who We Are
 
 App Name: GramReady
 Developer: Valeriia Mikhailova
@@ -11,138 +10,222 @@ Business Type: Sole Proprietorship
 Address: Luisenstraße 17, 68526 Ladenburg, Germany
 Contact Email: leravaanmikh@gmail.com
 Data Protection Officer: Valeriia Mikhailova (leravaanmikh@gmail.com)
-
 GramReady ("we," "our," or "us") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile application.
 
-2. Information We Collect
+Information We Collect
 
 2.1 Information You Provide
-• Email Address: When you create an account
-• Password: Securely encrypted for account access
-• Authentication Data: From Google Sign-In or Apple Sign-In (if used)
+
+Email Address: When you create an account
+Password: Securely encrypted for account access
+Authentication Data: From Google Sign-In or Apple Sign-In (if used)
 
 2.2 Information Automatically Collected
-• Device Motion Data: To detect camera orientation and provide photography guidance
-• Camera Access: To take photos and provide real-time guidance
-• App Usage Analytics: Basic app performance data via Firebase Analytics
-• Authentication Logs: For security purposes (kept for 90 days)
 
-2.3 Information We Do NOT Collect
-• Photos: Your photos are stored only on your device, never uploaded to our servers
-• Location Data: We do not track your location
-• Personal Content: We do not access or store your personal files
-• Biometric Data: Face detection is processed locally, no facial data is stored
+Device Motion Data: To detect camera orientation and provide photography guidance
+Camera Access: To take photos and provide real-time guidance
+App Usage Analytics: Basic app performance data via Firebase Analytics
+Authentication Logs: For security purposes (kept for 90 days)
 
-3. How We Use Your Information
+2.3 Facial Data and Biometric Information (DETAILED)
+What We Collect:
+
+Facial position coordinates for composition guidance
+Head pose orientation (tilt, rotation) for camera angle suggestions
+Face bounding box dimensions for framing analysis
+Facial landmark positions for photography rule assistance
+
+What We DO NOT Collect:
+
+Facial recognition or identification data
+Biometric templates or face prints
+Face texture, appearance, or visual characteristics
+Any data that could identify you personally
+Raw camera images or video frames
+Depth map information beyond basic pose
+
+How We Process Face Data:
+
+All facial analysis happens in real-time on your device
+Data is processed momentarily and immediately discarded
+No facial data is stored on your device or our servers
+No facial data is transmitted over the internet
+Processing is used only to generate photography guidance tips
+
+Purpose and Examples:
+Face data is used exclusively to provide photography assistance:
+
+Detecting if your head is too close to the frame edge
+Suggesting better camera angles (higher, lower, more centered)
+Ensuring subjects are well-positioned according to composition rules
+Providing tips for more natural poses and better framing
+
+Your Control:
+
+You can disable camera access at any time in iOS Settings
+The app only accesses face data when actively using the camera feature
+No face data persists after you close the app or switch away from camera mode
+
+Technical Safeguards:
+
+Face detection uses Apple's Vision and ARKit frameworks
+All processing occurs locally using Apple's on-device machine learning
+Zero network transmission of any facial or biometric information
+Automatic data destruction after each frame analysis
+
+2.4 Information We Do NOT Collect
+
+Photos: Your photos are stored only on your device, never uploaded to our servers
+Location Data: We do not track your location
+Personal Content: We do not access or store your personal files
+Biometric Data: Face detection is processed locally, no facial data is stored
+
+
+How We Use Your Information
 
 We use your information to:
-• Provide App Services: Enable account creation and authentication
-• Improve User Experience: Provide real-time photography guidance
-• App Performance: Monitor and improve app functionality
-• Security: Protect against unauthorized access and fraud
-• Legal Compliance: Meet legal and regulatory requirements
 
-4. Legal Basis for Processing (GDPR)
+Provide App Services: Enable account creation and authentication
+Improve User Experience: Provide real-time photography guidance
+App Performance: Monitor and improve app functionality
+Security: Protect against unauthorized access and fraud
+Legal Compliance: Meet legal and regulatory requirements
+
+3.1 Real-Time Photography Guidance (DETAILED)
+We use camera and facial data to provide photography assistance including:
+Composition Guidance: Analyzing subject position to suggest rule-of-thirds placement, centering, and optimal framing
+Lighting Analysis: Evaluating scene brightness to recommend better lighting conditions or positioning
+Camera Angle Suggestions: Using device motion and face orientation to suggest optimal camera height and angle
+Framing Assistance: Detecting when subjects are too close to frame edges or when important features might be cropped
+Pose Recommendations: Identifying rigid poses and suggesting more natural alternatives for better portraits
+All guidance is generated in real-time using on-device processing and no personal data leaves your device.
+
+Legal Basis for Processing (GDPR)
 
 We process your data based on:
-• Consent: Camera access, motion sensors (you can withdraw anytime)
-• Contract Performance: Account creation and app functionality
-• Legitimate Interest: App improvement and security
 
-5. Data Sharing and Third Parties
+Consent: Camera access, motion sensors (you can withdraw anytime)
+Contract Performance: Account creation and app functionality
+Legitimate Interest: App improvement and security
+
+
+Data Sharing and Third Parties
 
 5.1 Third-Party Services We Use
-• Firebase (Google): Authentication and basic analytics
-• Google Sign-In: Optional authentication method
-• Apple Sign-In: Optional authentication method
+
+Firebase (Google): Authentication and basic analytics
+Google Sign-In: Optional authentication method
+Apple Sign-In: Optional authentication method
 
 5.2 Data Sharing
-• We do not sell your personal data
-• We do not share data with advertisers (may change with future advertising features)
-• Limited sharing with service providers for essential app functions only
-• Legal compliance sharing only when required by law
 
-6. Data Retention
+We do not sell your personal data
+We do not share data with advertisers (may change with future advertising features)
+Limited sharing with service providers for essential app functions only
+Legal compliance sharing only when required by law
 
-• Active Accounts: Retained while you use the app
-• Inactive Accounts: Deleted after 3 years of no login activity
-• Authentication Logs: Deleted after 90 days
-• Analytics Data: Aggregated data retained indefinitely (anonymized)
 
-7. Your Rights Under GDPR
+Data Retention
+
+
+Active Accounts: Retained while you use the app
+Inactive Accounts: Deleted after 3 years of no login activity
+Authentication Logs: Deleted after 90 days
+Analytics Data: Aggregated data retained indefinitely (anonymized)
+Facial Data: Never stored - processed in real-time and immediately discarded
+
+
+Your Rights Under GDPR
 
 If you are in the EU, you have the right to:
-• Access: Request copies of your personal data
-• Rectification: Request correction of inaccurate data
-• Erasure: Request deletion of your data ("right to be forgotten")
-• Portability: Request transfer of your data
-• Restriction: Request limitation of processing
-• Objection: Object to data processing
-• Withdraw Consent: For data processing based on consent
+
+Access: Request copies of your personal data
+Rectification: Request correction of inaccurate data
+Erasure: Request deletion of your data ("right to be forgotten")
+Portability: Request transfer of your data
+Restriction: Request limitation of processing
+Objection: Object to data processing
+Withdraw Consent: For data processing based on consent
 
 To exercise these rights: Email leravaanmikh@gmail.com
 
-8. Data Security
+Data Security
 
 We implement appropriate security measures including:
-• Encryption: All data transmission is encrypted
-• Secure Authentication: Industry-standard authentication protocols
-• Limited Access: Only authorized personnel have data access
-• Regular Security Reviews: Ongoing security assessments
 
-9. International Data Transfers
+Encryption: All data transmission is encrypted
+Secure Authentication: Industry-standard authentication protocols
+Limited Access: Only authorized personnel have data access
+Regular Security Reviews: Ongoing security assessments
 
-• EU Users: Data may be transferred to the US (Firebase/Google servers)
-• Safeguards: Standard Contractual Clauses (SCCs) with Google
-• Protection: EU-equivalent protection standards maintained
 
-10. Cookies and Similar Technologies
+International Data Transfers
+
+
+EU Users: Data may be transferred to the US (Firebase/Google servers)
+Safeguards: Standard Contractual Clauses (SCCs) with Google
+Protection: EU-equivalent protection standards maintained
+
+
+Cookies and Similar Technologies
 
 10.1 Cookies We Use
-• Authentication Cookies: To keep you logged in
-• Analytics Cookies: Firebase Analytics for app improvement
-• Functional Cookies: Essential app functionality
+
+Authentication Cookies: To keep you logged in
+Analytics Cookies: Firebase Analytics for app improvement
+Functional Cookies: Essential app functionality
 
 10.2 Cookie Management
-• Most cookies are essential for app functionality
-• You can disable analytics in your device settings
-• Disabling essential cookies may limit app functionality
 
-11. Children's Privacy
+Most cookies are essential for app functionality
+You can disable analytics in your device settings
+Disabling essential cookies may limit app functionality
 
-• Age Requirement: No age restrictions, suitable for all ages
-• Parental Guidance: Recommended for children under 13
-• Special Protection: We do not knowingly collect unnecessary data from children
-• Parental Rights: Parents can request deletion of their child's data
 
-12. Geographic Availability
+Children's Privacy
+
+
+Age Requirement: No age restrictions, suitable for all ages
+Parental Guidance: Recommended for children under 13
+Special Protection: We do not knowingly collect unnecessary data from children
+Parental Rights: Parents can request deletion of their child's data
+
+
+Geographic Availability
 
 This app is available in:
-• Europe: All EU countries
-• United States: All states and territories
-• Australia: All territories
-• Asia: Selected countries
 
-13. Future Changes
+Europe: All EU countries
+United States: All states and territories
+Australia: All territories
+Asia: Selected countries
+
+
+Future Changes
 
 13.1 Advertising
-• Current Status: No advertising
-• Future Plans: May add advertising if app gains traction
-• Notice: 30-day advance notice before implementing advertising
-• Opt-out: Options to limit ad tracking will be provided
+
+Current Status: No advertising
+Future Plans: May add advertising if app gains traction
+Notice: 30-day advance notice before implementing advertising
+Opt-out: Options to limit ad tracking will be provided
 
 13.2 In-App Purchases
-• Current Status: No in-app purchases
-• Future Plans: May add premium features
-• Notice: Privacy policy will be updated before implementation
 
-14. Changes to This Policy
+Current Status: No in-app purchases
+Future Plans: May add premium features
+Notice: Privacy policy will be updated before implementation
 
-• Notification: You will be notified of material changes via app notification
-• Effective Date: Changes take effect 30 days after notification
-• Continued Use: Using the app after changes indicates acceptance
 
-15. Contact Us
+Changes to This Policy
+
+
+Notification: You will be notified of material changes via app notification
+Effective Date: Changes take effect 30 days after notification
+Continued Use: Using the app after changes indicates acceptance
+
+
+Contact Us
 
 Privacy Questions: leravaanmikh@gmail.com
 Data Protection Officer: Valeriia Mikhailova
@@ -150,20 +233,23 @@ Response Time: We will respond within 30 days
 Mailing Address: Luisenstraße 17, 68526 Ladenburg, Germany
 EU Representative: Valeriia Mikhailova (same contact information)
 
-16. Complaints
+Complaints
 
 EU Users: You have the right to lodge a complaint with your local supervisory authority:
-• Germany: Bundesbeauftragte für den Datenschutz und die Informationsfreiheit (BfDI)
-• Other EU Countries: Contact your national data protection authority
 
-17. App Store Compliance
+Germany: Bundesbeauftragte für den Datenschutz und die Informationsfreiheit (BfDI)
+Other EU Countries: Contact your national data protection authority
+
+
+App Store Compliance
 
 This app complies with:
-• Apple App Store: App Store Review Guidelines
-• Google Play Store: Google Play Developer Policy (if applicable)
-• GDPR: General Data Protection Regulation
-• CCPA: California Consumer Privacy Act (for US users)
 
-Last Reviewed: July 1, 2025
+Apple App Store: App Store Review Guidelines
+Google Play Store: Google Play Developer Policy (if applicable)
+GDPR: General Data Protection Regulation
+CCPA: California Consumer Privacy Act (for US users)
+
+Last Reviewed: July 8, 2025
 Next Review: January 1, 2026
-Version: 1.0
+Version: 1.1
